--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: sans-serif;
     padding: 25px;
-    background-color: #383838;
+    background-color: #f0f0f0;
 }
 input, button {
     display: block;
