--- a/style.css
+++ b/style.css
@@ -1,27 +1,44 @@
 body {
     font-family: sans-serif;
     padding: 25px;
-    color: white;
     background-image: url('scale_1200.jpeg'); /* Укажите путь к вашему изображению */
     background-size: cover; /* Изображение будет покрывать весь фон */
-    background-position: top;
-    background-repeat: no-repeat;
+    background-position: top; /* Изображение будет центрировано */
+    background-repeat: no-repeat; /* Изображение не будет повторяться */
+    color: white; /* Цвет текста на странице */
 }
+
 input, button {
     display: block;
     width: 100%;
     margin: 10px 0;
     padding: 10px;
     font-size: 24px;
+    color: black; /* Цвет текста внутри полей ввода и кнопок */
+    background-color: rgba(255, 255, 255, 0.7); /* Полупрозрачный белый фон */
+    border: none; /* Убирает стандартную границу */
+    border-radius: 5px; /* Скругленные углы */
+    outline: none; /* Убирает стандартный фокус */
 }
+
 button {
     width: auto;
+    color: white; /* Цвет текста внутри кнопки */
+    background-color: #333; /* Цвет фона кнопки */
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
+
+button:hover {
+    background-color: #555; /* Цвет фона кнопки при наведении */
+}
+
 .result {
     font-size: 40px;
     margin-top: 25px;
     color: white; /* Цвет текста результата */
-    background-color: rgba(0, 0, 0, 0.4); /* Полупрозрачный черный фон для текста результата */
+    background-color: rgba(0, 0, 0, 0.7); /* Полупрозрачный черный фон для текста результата */
     padding: 10px; /* Внутренние отступы */
     border-radius: 5px; /* Скругленные углы */
 }
