--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: sans-serif;
     padding: 25px;
-    background-image: url('scale_1200.jpeg'); /* Укажите путь к вашему изображению */
+    background-image: url('dummy-52.jpeg'); /* Укажите путь к вашему изображению */
     background-size: cover; /* Изображение будет покрывать весь фон */
     background-position: top; /* Изображение будет центрировано */
     background-repeat: no-repeat; /* Изображение не будет повторяться */
