--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     background-size: cover; /* Изображение будет покрывать весь фон */
     background-position: top; /* Изображение будет центрировано */
     background-repeat: no-repeat; /* Изображение не будет повторяться */
-    color: white; /* Цвет текста на странице */
+    color: black; /* Цвет текста на странице */
 }
 
 input, button {
